force-app/main/default/objects/DIA_TimeSheet__c/DIA_TimeSheet__c.object-meta.xml
<CustomObject>
    <label>DIA TimeSheet</label>
    <nameField>
        <displayFormat>DIATS-{000000}</displayFormat>
        <label>DIA TimeSheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA TimeSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>