force-app/main/default/objects/DIA_TimeSheet__c/fields/Checked_IN__c.field-meta.xml
<CustomField>
    <fullName>Checked_IN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked IN</label>
    <type>Checkbox</type>
</CustomField>