force-app/main/default/objects/DIA_TimeSheet__c/fields/CheckOut_Case_Materials_No_PII__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Case_Materials_No_PII__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckOut Case Materials No PII</label>
    <type>TextArea</type>
</CustomField>