force-app/main/default/objects/DIA_TimeSheet__c/fields/OnBoarding__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnBoarding</label>
    <referenceTo>OnBoarding__c</referenceTo>
    <relationshipLabel>DIA TimeSheets</relationshipLabel>
    <relationshipName>DIA_TimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>