force-app/main/default/objects/DIA_TimeSheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>User__c</columns>
    <columns>Number_of_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>PMO</label>
</ListView>